[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-outreach-mcp"
version = "1.0.0"
description = "MEOK AI Labs — AI-powered content generation for LinkedIn outreach. Helps sales teams and"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "linkedin", "professional-networking", "outreach-automation", "b2b-sales"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/linkedin-outreach-mcp"
Documentation = "https://meok.ai/docs/linkedin-outreach-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/linkedin-outreach-mcp/issues"
