[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "linkedin-outreach-mcp"
version = "1.0.0"
description = "AI-powered linkedin outreach MCP server for agents. Supports generate connection request, generate inmessage, generate post. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/linkedin-outreach-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
linkedin_outreach_mcp = "server:main"
